--- a/vol.html
+++ b/vol.html
@@ -11,7 +11,7 @@
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top" style="background-color: #3a3a3a">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Lasiafniruhd</a>
+        <a class="navbar-brand" href="index.html">Lasiafniruhd | Experience</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
